# optimal-execution

./: .gitignore  README.md  pyproject.toml
reports/: frontier.csv
scripts/: run_execution.py
src/execution/: data.py  frontier.py  model.py  viz.py
tests/: test_execution.py
