[project]
name = "optimal-execution"
version = "0.1.0"
description = "Almgren-Chriss optimal execution: closed-form optimal liquidation trajectory, cost/variance trade-off, and the efficient frontier — with impact parameters calibratable from real Deribit data."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tejas Pandya", email = "tbp8777@nyu.edu" }]
license = { text = "MIT" }
keywords = ["optimal-execution", "almgren-chriss", "market-impact", "trading", "quant"]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "requests>=2.31",   # Deribit public API (calibrate volatility from real prices)
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.uv]
package = false

[tool.ruff]
line-length = 110
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "N803", "N806"]
